--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,22 @@
+canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: transparent;
+}
+
+#background {
+	z-index: -1;
+}
+
 #selectionBoard {
 	height: 100%;
 	width: 100%;
 	position: fixed;
 	top: 0;
 	bottom: 0;
+	left: 0;
+	right: 0;
 
 	background: #000
 }
