--- a/public/styles.css
+++ b/public/styles.css
@@ -38,3 +38,23 @@ canvas {
 	border-radius: 4px;
 
 }
+
+/*** CONTROLS ***/
+
+#controls {
+	position: absolute;
+	left: 700px;
+}
+
+.button {
+	padding: 4px;
+}
+
+.button-img {
+	width: 75px;
+}
+
+.button.selected {
+	border: 3px solid #000;
+}
+
